modules/gdscript/tests/scripts/parser/errors/export_enum_wrong_array_type.gd
@export_enum("A", "B", "C") var x: Array[Color]

func test():
	pass
